slashies-macros/tests/command/e01_no_docstring_on_field.stderr
error: Command options must specify a description via a docstring
 --> tests/command/e01_no_docstring_on_field.rs:7:5
  |
7 |     bad_field: u64,
  |     ^^^^^^^^^
